<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/alert_width"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:gravity="center"
              android:padding="20dp"
              android:background="@drawable/dialog_background">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:gravity="left"
            android:textColor="#575757"
            android:textSize="19sp"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:text="@string/prompt_enter_secret"
    />
            <!--android:src="@drawable/title" -->

    <EditText
            android:id="@+id/id_txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:hint="input password"
            android:inputType="textPassword" />
    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

        <Button
                android:id="@+id/id_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/gray_button_background"
                />
        <Button
                android:id="@+id/id_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/dialog_blue_button"
                android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>